# UnrealMLAgentsPT

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .restyled.yaml  AUTHORS  CONTRIBUTING.rst  DRL.uplugin  LICENSE  LICENSE.unity  NOTICE.md  README.md  UnrealMLAgents.uplugin  setup.cfg  towncrier.toml
.github/: FUNDING.yml
Changelog/: .gitignore  README.rst  _template.rst
Config/: DefaultEngine.ini  DefaultGame.ini  FilterPlugin.ini
Docs/: Doxyfile.in  README.md  conf.py  contents.rst  index.rst  (+1 more)
MLearning/ue-agents-envs/: NOTICE.md  README.md  pyproject.toml  requirements.txt  setup.py
MLearning/ue-agents-envs/ueagents_envs/: __init__.py  base_env.py  communicator.py  environment.py  exception.py  rpc_utils.py  utils.py
MLearning/ue-agents-envs/ueagents_envs/communicator_objects/: agent_action_pb2.py  agent_info_action_pair_pb2.py  agent_info_pb2.py  brain_parameters_pb2.py  command_pb2.py  demonstration_meta_pb2.py  header_pb2.py  observation_pb2.py  training_analytics_pb2.py  unreal_input_pb2.py  unreal_message_pb2.py  unreal_output_pb2.py  unreal_rl_initialization_input_pb2.py  unreal_rl_initialization_output_pb2.py  unreal_rl_input_pb2.py  unreal_rl_output_pb2.py  unreal_to_external_pb2.py  unreal_to_external_pb2_grpc.py
MLearning/ue-agents-envs/ueagents_envs/side_channel/: __init__.py  default_training_analytics_side_channel.py  environment_parameters_channel.py  float_properties_channel.py  outgoing_message.py  raw_bytes_channel.py  side_channel.py  side_channel_manager.py  stats_side_channel.py
(+488 files in other folders)
