[build-system]
requires = ["setuptools", "setuptools-scm[toml]>=6.2.3",]
build-backend = "setuptools.build_meta"


[project]
name = "ueagents_envs"
description = "Unreal Engine Learning Agents interface"
authors = [
    {name = "Stephane Capponi", email = "stephane.capponi@gmail.com"}
]
license = {text = "Apache Software License"}
requires-python = ">=3.9"
keywords = [
    "Unreal Engine",
    "Artifical Intelligence"
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.packages.find]
include = ["ueagents_envs*"]
exclude = ["*.ipynb"]

[tool.setuptools.dynamic]
version = {attr = "ueagents_envs.__version__"}
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}
